ajuste radio view pokedex

--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,7 @@
 
                     <form class="ordenar"> 
                       <ul>
-                      <li id="order"><a href="#pokemon-container"><input  id="org" type="radio" checked> De N° 1 a N° 251</a></li><br>
+                      <li id="order"><a href="#pokemon-container"><input  id="org" type="radio"> De N° 1 a N° 251</a></li><br>
                       <li id="descendentes"><a href="#pokemon-container-descendentes"><input type="radio">De N° 251 a N° 1</a></li>
                       </ul>
                     </form>
